--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+9
+version: 1.0.0+12
 
 environment:
   sdk: ^3.9.2
@@ -55,6 +55,7 @@ dependencies:
   open_file: ^3.5.10
   pinput: ^5.0.2
   dio: ^5.9.0
+  local_auth: ^3.0.0
 
 
   http: any
