--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: wallet
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+# pub.dev using ⁠ flutter pub publish ⁠. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
@@ -23,10 +23,10 @@ environment:
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
+# consider running ⁠ flutter pub upgrade --major-versions ⁠. Alternatively,
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+# versions available, run ⁠ flutter pub outdated ⁠.
 dependencies:
   flutter:
     sdk: flutter
@@ -56,6 +56,9 @@ dependencies:
   pinput: ^5.0.2
   dio: ^5.9.0
   local_auth: ^3.0.0
+  clipboard: ^2.0.2
+  mobile_scanner: ^7.1.3
+  image: ^4.5.4
 
 
   http: any
@@ -65,7 +68,7 @@ dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
+  # activated in the ⁠ analysis_options.yaml ⁠ file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
